@@ -44,9 +44,25 @@ FacetWrap <- proto(Facet, {
   
   # Create grobs for each component of the panel guides
   add_guides <- function(., data, panels_grob, coord, theme) {
+
     aspect_ratio <- theme$aspect.ratio
-    if (is.null(aspect_ratio)) aspect_ratio <- 1
     
+    # If user hasn't set aspect ratio, and we have fixed scales, then
+    # ask the coordinate system if it wants to specify one
+    if (is.null(aspect_ratio) && !.$free$x && !.$free$y) {
+      xscale <- .$scales$x[[1]]
+      yscale <- .$scales$y[[1]]
+      ranges <- coord$compute_ranges(list(x = xscale, y = yscale))
+      aspect_ratio <- coord$compute_aspect(ranges)
+    }
+    
+    if (is.null(aspect_ratio)) {
+      aspect_ratio <- 1
+      respect <- FALSE
+    } else {
+      respect <- TRUE
+    }
+        
     n <- length(.$scales$x)
 
     axes_h <- matrix(list(), nrow = 1, ncol = n)
@@ -88,7 +104,7 @@ FacetWrap <- proto(Facet, {
     panelsGrid <- grobGrid(
       "panel", panels, nrow = nrow, ncol = ncol,
       heights = 1 * aspect_ratio, widths = 1,
-      as.table = .$as.table
+      as.table = .$as.table, respect = respect
     )
 
     strips <- .$labels_default(.$facet_levels, theme)
